testsuite/tests/rename/should_fail/T19843b.hs
{-# LANGUAGE ViewPatterns #-}

module T19843b where

import Prelude (map, even, undefined, Bool)

foo (Map even -> xs) = undefined
