testsuite/tests/rename/should_fail/T19843b.stderr

T19843b.hs:7:6: error: [GHC-88464]
    Data constructor not in scope: Map :: (a0 -> Bool) -> t -> t0
    Suggested fix: Perhaps use variable ‘map’ (imported from Prelude)
